# item_manager

./: .gitignore  Dockerfile  README.md  docker-compose.yml  growi_iframe.md  inventory.db  migrate_add_fixed_asset.py  pyproject.toml  sample_borrow.py  sample_email_config.py  sample_get_status.py  sample_get_users.py  sample_return.py  seed_db.py  test_output.txt  verify_notification.py
.github/workflows/: docs.yml
designe/: 内部設計.md  要件定義.md
docs/: api_usage.rst  build.rst  conf.py  email_notification.rst  how_to_add_data.rst  index.rst  inventory_app.routers.rst  inventory_app.rst  modules.rst
inventory_app/: admin.py  crud.py  main.py  models.py  notification.py  schemas.py  security.py
inventory_app/routers/: auth.py  items.py  users.py
inventory_app/static/: growi_fixed_assets_table.html  growi_table.html
tests/: conftest.py  test_auth.py  test_items_crud.py  test_operations.py
